[gd_scene load_steps=5 format=2]

[ext_resource path="res://twz/script/npc.gd" type="Script" id=1]
[ext_resource path="res://twz/image/Untitled 04-09-2024 10-06-22.png" type="Texture" id=2]
[ext_resource path="res://hsz/others/shadow.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 38.2884

[node name="Npc" type="Area2D"]
position = Vector2( 0, 1 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -9.53674e-07, -11 )
scale = Vector2( 1.71094, 1.78125 )
texture = ExtResource( 2 )

[node name="Shadow_npc" type="Sprite" parent="."]
position = Vector2( 0, 7 )
scale = Vector2( 2.17857, 3.10715 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -10 )
rotation = 2.35619
shape = SubResource( 1 )

[connection signal="body_entered" from="." to="." method="_on_Npc_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Npc_body_exited"]
